--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "flowbite": "^1.4.7",
     "flowbite-react": "^0.0.25",
+    "framer-motion": "^6.3.11",
     "next": "latest",
     "nodemon": "^2.0.16",
     "react": "^17.0.2",
